# dll-injection-template

./: LICENSE  README.md
combined/: CMakeLists.txt
combined/src/: Loader.cpp  Patch.cpp  PatchAPI.cpp  PatchAPI.hpp
separate/: CMakeLists.txt
separate/Loader/: CMakeLists.txt
separate/Patch/: CMakeLists.txt
